MAINT-2035 Fixed missing color & icon in Search UI

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -1056,6 +1056,10 @@ button.tooltips-right.normal-case span {
     background-color: #00a6e5 !important;
 }
 
+.btn-green{
+    background-color: #66BB6A !important;
+}
+
 .hamberger:hover {
     background-color: rgba(2, 2, 2, 0.1);
 }
